deploy: a6a23470f64d08c482a792d3e7efc513e3e94fd1

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
     <title>Welcome to Middleman</title>
-    <link href="/style.css" rel="stylesheet" />
-    <script src="/site.min.js"></script>
+    <link href="/middleman-webpack-demo/style.css" rel="stylesheet" />
+    <script src="/middleman-webpack-demo/site.min.js"></script>
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 340" class="middleman-logo" aria-labelledby="middleman-logo__title" role="img">
