deploy: 1c316c20c962c27c476a515bd1ceea29d69ed499

--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
 
 <a href="https://middlemanapp.com/basics/templating_language/" target="_blank">Read Documentation</a>
 
+<a href="/middleman-webpack-demo/about/">About</a>
+
   </body>
 </html>
